ApplicationWindow: remove contentWidth/Height

As illustrated by QTBUG-48072, setting Window.minimumWidth and
Window.minimumHeight automatically may cause very unpleasant
surprises.

Qt Quick Controls 2.x gives the user direct access to the header
and footer items, so they can easily calculate the desired minimum,
default and maximum sizes for the window.

Change-Id: I974566ee81af63a3e9cfd0fa1c1fa36e3989548a
Task-number: QTBUG-48072
Reviewed-by: Mitch Curtis <mitch.curtis@theqtcompany.com>